# llm-from-scratch-lab

./: .gitignore  README.md  pyproject.toml  run_lab.py
dataloaders/: datasetloader.py
llm_scratch_lab/: attention.py  lab.py  model_utils.py  tokenizer.py  transformer.py
llm_scratch_lab/models/: gpt.py
tokenizers/: tokenization.py
