[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-scratch-lab"
version = "0.1.0"
description = "A toolkit for building an LLM from scratch"
authors = [
    { name="Frantz Paul", email="fpaul787@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"