[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-scratch-lab"
version = "0.0.1"
authors = [
    { name="Frantz Paul", email="fpaul787@gmail.com" }
]
description = "A toolkit for building an LLM from scratch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/fpaul787/llm-from-scratch-lab"
Issues = "https://github.com/fpaul787/llm-from-scratch-lab/issues"